# cotiviti_intern_assessment

./: .gitignore
POC_model/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
POC_model/cache/llm/: .gitkeep  adversary_0f71334fec8558e95d5b5a0e.json  adversary_488b2befb3518dd453c2a913.json  adversary_7068e6068aad30cbc1ce585d.json  adversary_7c7892dbf0e82fba102be8c3.json  adversary_96a21b9374adff0118833d3f.json  adversary_bf21bcfed6e5cb204c96fe12.json  adversary_d78a7f576e2d3d98fa4e4192.json  compiler_3df3abe6fd295ce7429959b2.json  compiler_6816fe93975af7bbfcb8844e.json  compiler_86d7db516ca19eac147a9fc1.json  compiler_d122a052ab2a001f3ff475af.json  fixer_4ba491bedde30afe716fc698.json  fixer_cbe6e97da4493a362d28db7d.json  fixer_d92a28f95043c31a7bee2709.json
POC_model/data/: README.md  coverage_section_v1.md  coverage_section_v2.md
POC_model/runs/: .gitkeep
POC_model/runs/2026-07-02T223927Z_NCD-210.14-COVERAGE-V2/: rule.json  test_suite.json  transcript.json
POC_model/runs/2026-07-03T041126Z_NCD-210.14-COVERAGE-V1/: rule.json  test_suite.json  transcript.json
POC_model/scripts/: pre_flight.py  refresh_cache.py  validate_replay.py
POC_model/src/: __init__.py  adversary.py  app.py  canonicalize.py  claim_context.py  compiler.py  diff.py  engine.py  fixer.py  fixtures_loader.py  llm.py  loop.py  pdf_extract.py  prompts.py  schema.py
POC_model/tests/: test_adversary.py  test_canonicalize.py  test_claim_context.py  test_compiler.py  test_diff.py  test_engine.py  test_fixer.py  test_loop.py
POC_model/tests/fixtures/: known_good_rule_v1.json  (+1 more)
(+3 files in other folders)
