[project]
name = "policy-as-rule"
version = "0.1.0"
description = "Self-critiquing LLM compiler for healthcare coverage policies (POC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.115.0",
    "gradio==6.19.0",
    "pdfplumber==0.11.10",
    "jsonschema==4.26.0",
    "rich==15.0.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
]

[project.scripts]
policy-demo = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:libtmux"
